# QuadricFit

./: CMakeLists.txt  CannyDeriche.cpp  Paillou.cpp  QuadriqueNRC.cpp  README.md  main.cpp
